2008-11-17 Sarka Todorova <sarka.todorova@cern.ch>
	* AGDD BAR volumes turned to simplified as default (AGDD bug/feature leads to excess of material)
	* AGDD naming (partly) implemented (BAR/ECT/Feet/Rail)
	* tagged as MuonTrackingGeometry-00-04-04

2008-11-04 Sarka Todorova <sarka.todorova@cern.ch>
	* full chain working with AGDD( 3D frame not optimized with AGDD material yet )
	* merge with 00-03-22-01 branch to fix RPC cutouts
	* tagged as MuonTrackingGeometry-00-04-03

2008-10-23 Sarka Todorova <sarka.todorova@cern.ch>
	* fixes simplification of volumes
	* MIMB:hardcoded fractions replaced by on-fly scan estimate
	* simplification to layers no longer supported ( no obvious reasons to do so )
	* memory leaks fixed (S.Snyder)
	* tagged as MuonTrackingGeometry-00-04-02

2008-10-20 Sarka Todorova <sarka.todorova@cern.ch>
	* first version of simplified AGDD volumes
	* blending does not work for AGDD input yet!
	* tagged as MuonTrackingGeometry-00-04-01

2008-10-06 Sarka Todorova <sarka.todorova@cern.ch>
	* first version capable to retrieve and process AGDD volumes
	* simplification and optimization does not work for AGDD input yet!
	* tagged as MuonTrackingGeometry-00-04-00

2008-10-06 Sarka Todorova <sarka.todorova@cern.ch>
	* minor updates (MdtMultiFoam material, dealing with TGC cutouts)
	* tagged as MuonTrackingGeometry-00-03-21,-00-03-22

2008-09-09 Sarka Todorova <sarka.todorova@cern.ch>
	* minor updates (use statement, Ded material, Mdt mismatch warning)
	* tagged as MuonTrackingGeometry-00-03-20

2008-08-06 Sarka Todorova <sarka.todorova@cern.ch>
	* default MuonSpectrometerEntrance resized (R=4251,z=6750)
	* tagged as MuonTrackingGeometry-00-03-19

2008-07-22 Sarka Todorova <sarka.todorova@cern.ch>
	* fix Ded material properties
	* tagged as MuonTrackingGeometry-00-03-18

2008-06-17 Sarka Todorova <sarka.todorova@cern.ch>
	* move active material to ExtendedMaterialProperties
	* avoid use of ::globalToLocal to prevent crashes