@@ -1,3 +1,8 @@
+2008-11-24 Sarka Todorova <sarka.todorova@cern.ch>
+	* fix phi span calculation
+	* protect material blending ( vanishing diluting factor )
+	* tagged as MuonTrackingGeometry-00-04-05
+
 2008-11-17 Sarka Todorova <sarka.todorova@cern.ch>
 	* AGDD BAR volumes turned to simplified as default (AGDD bug/feature leads to excess of material)
 	* AGDD naming (partly) implemented (BAR/ECT/Feet/Rail)
